# ethsbell-rewrite

./: .browserslistrc  .dockerignore  .ejsrc.js  .env  .env.example  .gitignore  .htmlnanorc.js  .posthtmlrc  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Dockerfile  LICENSE  LICENSE.html  README.md  auto-coverage.sh  build.rs  def.example.json  def.json  package-lock.json  package.json  posthtml.config.js  rust-toolchain.toml  shell.nix  test.sh  test_schedule.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  usability.md
.github/workflows/: codeql.yml  img.yml  lint-js.yml  tests-rs.yml  tests.yml  wasm.yml
def.d/: early_dismissal.json  first_day.json  late_start.json  monday.json  no_school.json  normal.json
frontend/: advisory.js  helpers.js  index.css  index.ejs  index.html  index.js  license.html  redirect.js
frontend-old/: index.css  index.html
frontend/about/: index.css  index.ejs  index.html
frontend/config/: index.css  index.ejs  index.html  schedule.js
frontend/editor/: auth-section.js  auth_section.js  controls-section.js  helpers.js  index.css  index.ejs  index.html
frontend/global/: autohide_nav.js  fullscreen.js  global.css  helpers.js  progress.js  timeline.js
frontend/include/: advisory.html  fullscreen.ejs  fullscreen.html  navbar.ejs  navbar.html  prelude.ejs  prelude.html  schedule.html  timeline.html
frontend/put_schedule/: index.html  schedule.js
frontend/schedule/: calendar.js  index.css  index.ejs  index.html  index.js
frontend/timeline/: index.css  index.ejs  index.html  index.js
frontend/verbose/: index.css  index.html  index.js
src/: aliases.rs  ical.rs  impls.rs  lib.rs  locks.rs  login.rs  main.rs  rocket_builder.rs  schedule.rs
src/api/: legacy-display.html  legacy.rs  mod.rs  oliver.html  v1.rs  v2.rs
src/frontend/: mod.rs
src/ical/: event.rs  mod.rs
src/schedule/: def.rs  event.rs  mod.rs  period.rs  schedule.rs  schedule_inner.rs  schedule_type.rs
templates/: legacy-display.tera  widget.tera
tests/: Dockerfile  api_legacy.rs  api_v1.rs  api_v2.rs  def.json  docker-compose.yml  package.json  schedule.rs  test.js
tests/static/: main.ics  override.ics
