[package]
name = "ethsbell-rewrite"
version = "1.2.1"
authors = ["Willow Carlson-Huber <willow.ch@protonmail.com>", "Albert Portnoy <albert@asportnoy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.4.10", optional = true}
rocket_contrib = {version = "0.4.10", features = ["json", "tera_templates"], optional = true}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
chrono = {version = "0.4.19", features = ["serde"]}
reqwest = {version = "0.11.3", features = ["blocking"], optional = true}
serde_regex = "1.1.0"
regex = "1.4.6"
urlencoding = "2.0.0"
thiserror = "1.0.24"
base64 = "0.13.0"
rand = "0.8.3"

rocket_okapi = {version = "0.6.0-alpha-1", optional = true}
schemars = {version = "0.8.3", features = ["chrono"], optional = true}
okapi = { version = "0.5.0-alpha-1", features = ["derive_json_schema"], optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ethsbell-rewrite"
required-features = ["ws"]

[features]
ws = ["rocket", "rocket_contrib", "pull", "rocket_okapi", "schemars", "okapi"]
pull = ["reqwest"]
